Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-30494

Wrong pageSizeMM of QPrinter

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.1.0
    • 5.0.1
    • None
    • Windows 7 x64, Qt Creator 2.6.2, MinGW
    • 839a9c11de9b639d3e19ca62fd363a9db3a63d11

    Description

      QPrinter printer;
      printer.setPageSize(QPrinter::A0);
      qDebug() << printer.pageSizeMM ();
      

      result : QSizeF(210, 297)
      return A4 format size, not A0.

      in qpagedpaintdevice.cpp

      void QPagedPaintDevice::setPageSize(PageSize size)
      {
          if (size >= Custom)
              return;
          d->pageSize = size;
          d->pageSizeMM = QSizeF(pageSizes[A4].width, pageSizes[A4].height);
      }
      

      pageSizeMM sets always by A4 format?

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            johnlayt John Layt
            pesto Elisey
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes