QPagedPaintDevice: Fix setPageSize() to set correct metrics

Use the correct metrics for the requested PageSize instead of always
defaulting to A4.

Task-number: QTBUG-30494
Change-Id: Ia3978afe3f7cc9b1ded1065416e5c3def44e7a05
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@digia.com>
Reviewed-by: Gunnar Sletta <gunnar.sletta@digia.com>

cregit: 839a9c11de9b639d3e19ca62fd363a9db3a63d11 https://github.com/qt/qtbase/commit/839a9c11de9b639d3e19ca62fd363a9db3a63d11